# Agentic_HR_RAG_System

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
api-service/: .dockerignore  .env.example  Dockerfile  missing_endpoints_analysis.md  pyproject.toml  requirements.txt
api-service/alembic/: env.py
api-service/alembic/versions/: 1a929437f3bf_initial_from_current_models.py  2f3a4b5c6d7e_add_allowed_roles_to_documents.py  3a4b5c6d7e8f_drop_department_id_from_documents.py  4b5c6d7e8f90_add_file_url_to_documents.py  4d9c2a7b8e11_add_knowledge_base_tables.py  8c6f5f3aa4b2_drop_qdrant_point_ids_from_face_profiles.py  b7e2d9f4c1aa_add_registered_by_to_employees.py  fc719c00346f_initial_from_current_models.py
api-service/src/: main.py
api-service/src/api/v1/: routers.py
api-service/src/api/v1/features/attendance/: controller.py
api-service/src/api/v1/features/audit/: schemas.py
api-service/src/api/v1/features/chat/: controller.py  models.py  repository.py  schemas.py  service.py
api-service/src/api/v1/features/corrections/: schemas.py
api-service/src/api/v1/features/documents/: controller.py  models.py  repository.py  schemas.py  service.py
api-service/src/api/v1/features/leaves/: controller.py  repo.py  schemas.py  service.py
api-service/src/api/v1/features/notifications/: schemas.py
api-service/src/api/v1/shared/: enums.py
api-service/src/core/clients/chatbox/: client.py  schemas.py
api-service/src/core/configs/: settings.py
api-service/src/core/db/: model_registry.py
api-service/src/core/dependencies/: auth.py  dep.py
(+133 files in other folders)
