[tool.poetry]
name = "api-service"
version = "0.1.0"
description = "FastAPI service for the HR attendance system"
authors = ["PhucNguyenThanh04 <thanhphucnguyen101204@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "0.135.3"
uvicorn = "0.43.0"
python-dotenv = "1.2.2"
pydantic = "2.12.5"
pydantic-core = "2.41.5"
pydantic-settings = "2.13.1"
email-validator = "2.2.0"
asyncpg = "0.31.0"
psycopg2-binary = "2.9.10"
sqlalchemy = "2.0.49"
httpx = "0.28.1"
redis = "5.2.1"
python-jose = "3.3.0"
passlib = { version = "1.7.4", extras = ["bcrypt"] }
fastapi-mail = "1.4.1"
python-multipart = "0.0.20"
alembic = "1.18.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
